# guard

./: SECURITY.md  repoguard.py
.github/workflows/: ci.yml
repo-guard-10/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
repo-guard-10/docs/: architecture.md
repo-guard-10/src/repo_guard/: __init__.py  cli.py  discovery.py  models.py  patterns.py  reporters.py  scanner.py
repo-guard-10/tests/: test_cli.py  test_config.py  test_scanner.py
src/repo_guard/: config.py
