[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-guard"
version = "0.2.0"
description = "A small, dependency-free scanner for likely secrets and repository bloat."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tagir Kandykbayev" }]
keywords = ["security", "secrets", "git", "cli", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]

[project.urls]
Repository = "https://github.com/kandykbayevtagir-wq/repo-guard"
Issues = "https://github.com/kandykbayevtagir-wq/repo-guard/issues"

[project.scripts]
repo-guard = "repo_guard.cli:entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repo_guard = ["py.typed"]
